Links should be fixed now

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
 
 <header>
-    <a href="http://localhost:3000"><h1><span>Hayk Saribekyan</span></h1></a>
 
     <nav>
-        <a href="http://localhost:3000/#about">About</a>
-        <a href="http://localhost:3000#research">Research</a>
-        <a href="http://localhost:3000#education">Education</a>
-        <a href="http://localhost:3000#activities">Other Activities</a>
-        <a href="http://localhost:3000#contact">Contact</a>
+        <a href="https://saribekyan.github.io/#about">About</a>
+        <a href="https://saribekyan.github.io#research">Research</a>
+        <a href="https://saribekyan.github.io#education">Education</a>
+        <a href="https://saribekyan.github.io#activities">Other Activities</a>
+        <a href="https://saribekyan.github.io#contact">Contact</a>
     </nav>
 
 </header>
@@ -26,7 +25,7 @@
     <div class="about-lockup">
         <div class="face"></div>
         <div class="about-txt">
-            <h3 id="about">About Me</h3>
+            <h3 id="about">Hayk Saribekyan</h3>
             <div class="blurb">
                 <p> I am an MEng student at the <a href="http://www.eecs.mit.edu/">Electrical Engineering and Computer Science department</a> of <a href="http://mit.edu">MIT</a>. I work in the <a href="http://ccg.csail.mit.edu">Computational Connectomics Group</a> with <a href="http://people.csail.mit.edu/shanir/">Prof. Nir Shavit</a>. My reseach interests are concurrent algorithms and data structures, and their applications in computational neuroscience. </p>
 <p> I have received my undergraduate degree in Computer Science from MIT in 2016. As an undergraduate student I have interned at Google and D.E. Shaw & Co. and did undergraduate research in my current (computational connectomics) group. </p>
@@ -47,7 +46,7 @@
     <p>
     I have worked in <a href="http://ccg.csail.mit.edu">Computational Connectomics Group</a> on developing a high-throughput connectomics pipeline.
     My project was called Big Data Agglomeration for Connectomics (see <a href="/assets/files/big-data-agg-poster.pdf">poster</a>),
-    for which I received <a href="http://web.mit.edu/urop/options/awards.html#pogosyants">Anna Poghosyats UROP Award</a>.
+    for which I received the <a href="http://web.mit.edu/urop/options/awards.html#pogosyants">Anna Poghosyats UROP Award</a>.
     My research was supported by Landsman Undergraduate Research and Innovation Fund.
     </p>
 
