--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="about-txt">
             <h3 id="about">Hayk Saribekyan</h3>
             <div class="blurb">
-                <p> I am an MEng student at the <a href="http://www.eecs.mit.edu/">Electrical Engineering and Computer Science department</a> of <a href="http://mit.edu">MIT</a>. I work in the <a href="http://ccg.csail.mit.edu">Computational Connectomics Group</a> with <a href="http://people.csail.mit.edu/shanir/">Prof. Nir Shavit</a>. My reseach interests are concurrent algorithms and data structures, and their applications in computational neuroscience. </p>
+                <p> I am a candidate for a Master of Engineering degree at the <a href="http://www.eecs.mit.edu/">Electrical Engineering and Computer Science department</a> of <a href="http://mit.edu">MIT</a>. I work in the <a href="http://ccg.csail.mit.edu">Computational Connectomics Group</a> with <a href="http://people.csail.mit.edu/shanir/">Prof. Nir Shavit</a>. My reseach interests are concurrent algorithms and data structures, and their applications in computational neuroscience. </p>
 <p> I have received my undergraduate degree in Computer Science from MIT in 2016. As an undergraduate student I have interned at Google and D.E. Shaw & Co. and did undergraduate research in my current (computational connectomics) group. </p>
             </div>
             <div class="cv" target="_blank">Feel free to download my <a href="/assets/files/CV.pdf">CV</a> (as of August 2016).
