--- a/courses/temp_course/index.html
+++ b/courses/temp_course/index.html
@@ -12,9 +12,9 @@
 
     <nav>
         <a href="https://saribekyan.github.io/#about">About</a>
-        <a href="https://saribekyan.github.io#research">Research</a>
         <a href="https://saribekyan.github.io#education">Education</a>
-        <a href="https://saribekyan.github.io#activities">Other Activities</a>
+        <a href="https://saribekyan.github.io#teaching">Teaching</a>
+        <a href="https://saribekyan.github.io#publications">Publications</a>
         <a href="https://saribekyan.github.io#contact">Contact</a>
     </nav>
 
