--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <nav>
         <a href="https://saribekyan.github.io/#about">About</a>
-        <a href="https://saribekyan.github.io#research">Research</a>
         <a href="https://saribekyan.github.io#education">Education</a>
-        <a href="https://saribekyan.github.io#activities">Other Activities</a>
+        <a href="https://saribekyan.github.io#teaching">Teaching</a>
+        <a href="https://saribekyan.github.io#publications">Publications</a>
         <a href="https://saribekyan.github.io#contact">Contact</a>
     </nav>
 
@@ -30,55 +30,38 @@
                 <p> I am a candidate for a Master of Engineering degree at the <a href="http://www.eecs.mit.edu/">Electrical Engineering and Computer Science department</a> of <a href="http://mit.edu">MIT</a>. I work in the <a href="http://ccg.csail.mit.edu">Computational Connectomics Group</a> with <a href="http://people.csail.mit.edu/shanir/">Prof. Nir Shavit</a>. My reseach interests are concurrent algorithms and data structures, and their applications in computational neuroscience. </p>
 <p> I have received my undergraduate degree in Computer Science from MIT in 2016. As an undergraduate student I have interned at Google and D.E. Shaw & Co. and did undergraduate research in my current (computational connectomics) group. </p>
             </div>
-            <div class="cv" target="_blank">Feel free to download my <a href="/assets/files/CV.pdf">CV</a> (as of August 2016).
+            <div class="cv" target="_blank">Feel free to download my <a href="/assets/files/CV.pdf">CV</a> (as of January 2017).
         </div>
     </div>
 </section>
 
 
 <section>
-    <h3 id="research">Research Projects</h3>
+    <h3 id="classes">Classes</h3>
+
+    <a href="https://stellar.mit.edu/S/course/6/sp14/6.816/">6.836 - Multicore Programming</a>
+    </br>
+    <a href="http://student.mit.edu/catalog/search.cgi?search=6.852&style=verbatim">6.852 - Distributed Algorithms</a>
+    </br>
+    <a href="https://pdos.csail.mit.edu/6.824/">6.824 - Distributed Systems</a>
+    </br>
+    <a href="http://courses.csail.mit.edu/6.854/16/">6.854 - Advanced Algorithms</a>
 
     <p>
-    Currently, I work on concurrent data structures that can be used to store and efficiently query large amounts of connectivity data harvested from mouse cortex.
-    </p>
-
-    <p>
-    I have worked in <a href="http://ccg.csail.mit.edu">Computational Connectomics Group</a> on developing a high-throughput connectomics pipeline.
-    My project was called Big Data Agglomeration for Connectomics (see <a href="/assets/files/big-data-agg-poster.pdf">poster</a>),
-    for which I received the <a href="http://web.mit.edu/urop/options/awards.html#pogosyants">Anna Poghosyats UROP Award</a>.
-    My research was supported by Landsman Undergraduate Research and Innovation Fund.
-    </p>
-
-    <ol class="bibliography"></ol>
-</section>
-
-<section>
-    <h3 id="education">Education</h3>
-
-    <p>
-    I have taken the following advanced or graduate level courses at MIT:</br>
-    6.836 - Multicore Programming </br>
-    6.851 - Distributed Algorithms </br>
-    6.824 - Distributed Systems </br>
-    6.864 - Advanced Natural Language Processing </br>
-    6.035 - Computer Language Engineering
-    </p>
-    <p>
-    In my 3rd undergraduate year I did the wonderful <a href="https://gecd.mit.edu/go-abroad/study-abroad/mit-study-abroad-programs/cambridge-mit-exchange-cme">Cambridge-MIT exchange</a> program, and studied Part II Mathemtaics there. I took</br>
-    Graph Theory</br>
-    Set Theory and Logic</br>
-    Coding and Cryptography</br>
-    Number Theory</br>
-    Mathematical Biology</br>
+    I also took Graph Theory, Set Theory and Logic, Coding and Cryptography, Number Theory, Mathematical Biology
+    during the <a href="https://gecd.mit.edu/go-abroad/study-abroad/mit-study-abroad-programs/cambridge-mit-exchange-cme">Cambridge-MIT exchange</a> program in my 3rd year at MIT.
     </p>
 </section>
 
+
 <section>
-    <h3 id="activities">Other Activities</h3>
+    <h3 id="teaching">Teaching</h3>
 
     <p>
-    One of my main interests is teaching.
+    I am a teaching assistant for <a href="https://stellar.mit.edu/S/course/6/sp17/6.816">6.816/6.836 Multicore Programming course</a> at MIT.
+    </p>
+
+    <p>
     I have participated in two <a href="http://misti.mit.edu/global-teaching-labs">Global Teaching Labs programs</a>: in Italy and in Armenia.
     Members of MIT Armenian Society, including myself, have played an active role in <a href="http://news.mit.edu/2015/misti-global-teaching-labs-launches-armenia-pilot-program-1123">initiating the program in 2015</a>.
     So far we have successfully, completed two GTL Armenia Programs.
@@ -93,12 +76,16 @@
     Prior to MIT, I have trained the Armenian national team for International Olympiad in Informatics and was the deputy leader of the team in IOI 2011 in Thailand.
     </p>
 
-    <p>
-    I am also a passionate hiker (or hayker), and love wandering in <a href="/assets/img/geghama.jpg">Armenian mountains</a>.
-    My other hobbies include playing the flute and playing racket sports.
-    </p>
-
 </section>
+
+
+<section>
+    <h3 id="publications">Publications</h3>
+
+    <ol class="bibliography"><li><span id="matveev2016multicore">A. Matveev, Y. Meirovitch, H. Saribekyan, W. Jakubiuk, T. Kaler, G. Odor, D. Budden, A. Zlateski, and N. Shavit, “A multicore path to connectomics-on-demand,” in <i>Proceedings of the 22nd ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</i>, to appear in 2017. (Best Paper nominee). </span></li>
+<li><span id="meirovitch2016multi">Y. Meirovitch, A. Matveev, H. Saribekyan, D. Budden, D. Rolnick, G. Odor, S. K.-B. T. R. Jones, H. Pfister, J. W. Lichtman, and N. Shavit, “A Multi-Pass Approach to Large-Scale Connectomics,” <i>arXiv preprint arXiv:1612.02120</i>, 2016. </span></li></ol>
+</section>
+
 
 <section class="contact-section">
   <div>
@@ -137,3 +124,4 @@
 <script src="/assets/js/functions.js" type="text/javascript"></script>
 </body>
 </html>
+
