--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <h3 id="publications">Publications</h3>
 
     <ol class="bibliography"><li><span id="matveev2016multicore">A. Matveev, Y. Meirovitch, H. Saribekyan, W. Jakubiuk, T. Kaler, G. Odor, D. Budden, A. Zlateski, and N. Shavit, “A multicore path to connectomics-on-demand,” in <i>Proceedings of the 22nd ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</i>, to appear in 2017. (Best Paper nominee). </span></li>
-<li><span id="meirovitch2016multi">Y. Meirovitch, A. Matveev, H. Saribekyan, D. Budden, D. Rolnick, G. Odor, S. K.-B. T. R. Jones, H. Pfister, J. W. Lichtman, and N. Shavit, “A Multi-Pass Approach to Large-Scale Connectomics,” <i>arXiv preprint arXiv:1612.02120</i>, 2016. </span></li></ol>
+<li><span id="meirovitch2016multi">Y. Meirovitch, A. Matveev, H. Saribekyan, D. Budden, D. Rolnick, G. Odor, S. K.-B. T. R. Jones, H. Pfister, J. W. Lichtman, and N. Shavit, “A Multi-Pass Approach to Large-Scale Connectomics,” 2016. [<a href="https://arxiv.org/abs/1612.02120" target="_blank">arXiv</a>]</span></li></ol>
 </section>
 
 
