--- a/courses/temp_course/index.html
+++ b/courses/temp_course/index.html
@@ -11,7 +11,7 @@
 <header>
 
     <nav>
-        <a href="https://saribekyan.github.io/#about">About</a>
+        <a href="https://saribekyan.github.io#about">About</a>
         <a href="https://saribekyan.github.io#education">Education</a>
         <a href="https://saribekyan.github.io#teaching">Teaching</a>
         <a href="https://saribekyan.github.io#publications">Publications</a>
