--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 
     <nav>
-        <a href="https://saribekyan.github.io/#about">About</a>
+        <a href="https://saribekyan.github.io#about">About</a>
         <a href="https://saribekyan.github.io#education">Education</a>
         <a href="https://saribekyan.github.io#teaching">Teaching</a>
         <a href="https://saribekyan.github.io#publications">Publications</a>
@@ -37,7 +37,7 @@
 
 
 <section>
-    <h3 id="classes">Classes</h3>
+    <h3 id="education">Education</h3>
 
     <a href="https://stellar.mit.edu/S/course/6/sp14/6.816/">6.836 - Multicore Programming</a>
     </br>
@@ -110,9 +110,9 @@
   <div class="content-wrap">
     <nav>
         <a href="#about">About</a>
-        <a href="#research">Research</a>
         <a href="#education">Education</a>
-        <a href="#activities">Other Activities</a>
+        <a href="#teaching">Teaching</a>
+        <a href="#Publications">Publications</a>
         <a href="#contact">Contact</a>
     </nav>
     <p class="copyright">Updated: 13 August, 2016</p>
